2014-08-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/fit.c:  Handle columnheaders in input to "fit".
	Bug #1467

	* src/misc.c (lp_parse):  Flag "set object N lt <lt>" as an error,
	since currently this must be done be "set object N fs bo <lt>".
	Probably we should figure out how to make this command work, but
	better to issue an error than accept it and then ignore it.
	Bug #1460

2014-08-21  Ethan A Merritt  <merritt@u.washington.edu>

	* Branchpoint for 5.0 (cvs tag -b branch-5-0-stable)

	The main (development) branch is now marked 5.1 and will eventually
	be used as the basis for a future release named gnuplot version 5.2.

				>>> NOTE <<<

	Starting now 
	============

	* Bugfixes for version 5 should be applied to both the main branch
	(5.1 == this one) and the stable branch (branch-5-0-stable).
	They will first appear in patchlevel releases 5.0.1, 5.0.2, and so on.

	* Major new features and experimental changes belong here, not in the
	stable branch.  They will appear eventually in release 5.2.

	* Minor new features can go in both branches at your discretion, but
	remember that the stable branch should ideally never break.
	That means new code should be tested here in the development
	branch first, and only after testing be added or back-ported to the
	stable branch.

2014-08-20 Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c:  Distinct empirical scale factors for
	dashlength used by pngcairo, pdfcairo, and wxt.
	* term/emf.trm:  Scale dashlength with current linewidth.

2014-08-18 Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (place_arrows) src/graph3d.c (place_arrows3d):
	Only invoke the arrowheads only code if there really is an arrowhead.

2014-08-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/mingw/Makefile (VPATH): Drop $W from VPATH.  Necessary to
	avoid circular dependency on wgnuplot.mnu
	(%.$(O)): Use pattern rule instead of VPATH to build Windows
	source files.